--- a/Angular/04-countryApiApp/src/index.html
+++ b/Angular/04-countryApiApp/src/index.html
@@ -7,8 +7,4 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body class="container">
-  <app-root></app-root>
-</body>
-</html>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;40
