--- a/Angular/refactorizacion/src/index.html
+++ b/Angular/refactorizacion/src/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 <!--   <link rel="stylesheet" href="https://unpkg.com/primeflex@3.3.0/primeflex.min.css"> -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <app-root></app-root>
